# docs/swagger.json
@@ -4,27 +4,16 @@
         "contact": {}
     },
     "paths": {
-        "/v1/file": {
+        "/v1/book": {
             "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    },
-                    {
-                        "JwtToken": []
-                    }
-                ],
-                "description": "Mendapatkan List Files",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Get Book with Pagination",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "File"
+                    "Book"
                 ],
-                "summary": "Mendapatkan List Files",
+                "summary": "Get Book with Pagination",
                 "parameters": [
                     {
                         "type": "string",
@@ -45,9 +34,27 @@
                         "in": "query"
                     },
                     {
-                        "type": "string",
-                        "description": "token (string)",
-                        "name": "token",
+                        "type": "integer",
+                        "description": "sort (id or publication_year)",
+                        "name": "sort",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "order (asc or desc)",
+                        "name": "order",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "status (status)",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "category_id (int)",
+                        "name": "category_id",
                         "in": "query"
                     }
                 ],
@@ -57,6 +64,245 @@
                     }
                 }
             },
+            "post": {
+                "description": "Create New Book",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Create Book",
+                "parameters": [
+                    {
+                        "description": "Create body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqres.BookRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/book-category": {
+            "get": {
+                "description": "Get category Book with Pagination",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BookCategory"
+                ],
+                "summary": "Get Category Book  with Pagination",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search (string)",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "page (int)",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "limit (int)",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "status (status)",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "post": {
+                "description": "Create New Book Category",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BookCategory"
+                ],
+                "summary": "Create Book Category",
+                "parameters": [
+                    {
+                        "description": "Create body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqres.BookCategoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/book-category/{id}": {
+            "put": {
+                "description": "Update Single Book Category by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BookCategory"
+                ],
+                "summary": "Update Single Book Category by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqres.BookCategoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Single Book Category by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "BookCategory"
+                ],
+                "summary": "Delete Single Book Category by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/book/{id}": {
+            "get": {
+                "description": "Get Single Book",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Get Single Book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "any",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "put": {
+                "description": "Update Single Book by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Update Single Book by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/reqres.BookRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete Single Book by ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Book"
+                ],
+                "summary": "Delete Single Book by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/v1/file": {
             "post": {
                 "security": [
                     {
@@ -90,6 +336,70 @@
                     "200": {
                         "description": "OK"
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "reqres.BookCategoryRequest": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "icon": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "reqres.BookRequest": {
+            "type": "object",
+            "required": [
+                "category_id",
+                "title"
+            ],
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "book_code": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "integer"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "image": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "number_of_pages": {
+                    "type": "integer"
+                },
+                "publication_year": {
+                    "type": "integer"
+                },
+                "publisher": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "boolean"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         }
